# open-computer-use-wayland

./: ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  MCP.md  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/open-computer-use/: Cargo.toml
crates/open-computer-use/src/: accessibility.rs  atspi_adapter.rs  capture.rs  cli.rs  contract.rs  desktop_launcher.rs  encoder.rs  errors.rs  geometry.rs  lib.rs  main.rs  portal.rs  runtime.rs  screenshot.rs  server.rs  validation.rs
crates/open-computer-use/src/input/: backend.rs  coordinates.rs  eis.rs  keyboard.rs  keyboard_input.rs  mod.rs  pointer.rs
crates/open-computer-use/tests/: cancellation.rs  contract.rs  process.rs  readiness.rs  validation.rs
