[workspace]
members = ["crates/open-computer-use"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"

[workspace.dependencies]
ashpd = { version = "=0.13.13", default-features = false, features = ["remote_desktop", "screencast", "tokio"] }
atspi = { version = "=0.30.0", default-features = false }
atspi-proxies = { version = "=0.14.0", default-features = false }
base64 = "=0.22.1"
futures-util = "=0.3.32"
gio = { version = "=0.21.5", features = ["v2_58"] }
image = { version = "=0.25.10", default-features = false, features = ["png"] }
pipewire = { version = "=0.10.0", features = ["v1_0_0"] }
reis = { version = "=0.7.0", default-features = false, features = ["tokio"] }
rmcp = { version = "=2.2.0", default-features = false, features = ["server", "transport-io"] }
rustix = { version = "=1.1.4", default-features = false, features = ["fs", "time"] }
serde_json = "=1.0.150"
tokio = { version = "=1.49.0", features = ["io-std", "io-util", "macros", "rt", "sync", "time"] }
xkbcommon = { version = "=0.9.0", default-features = false }
zbus = { version = "=5.18.0", default-features = false, features = ["tokio"] }

[workspace.lints.rust]
unsafe_code = "forbid"
